# pyCircuit

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
binding/python/pycircuit/: __init__.py  cli.py  dsl.py  hw.py  jit.py
compiler/frontend/pycircuit/: __init__.py  cli.py  (+6 more)
compiler/mlir/: CMakeLists.txt
designs/eda_testcases/: EDA_TEST_PLAN.md  case01_comb_alu.py  case02_shift_register.py  case03_fsm_traffic.py  case04_pipeline_mac.py  case05_sync_fifo.py  case06_multi_clock.py  case07_bus_arbiter.py  case08_hier_soc.py  case09_mem_subsys.py
designs/examples/: README.md  counter.py  fifo_loopback.py  hier_modules.py  huge_hierarchy_stress.py  issue_queue_2picker.py  jit_control_flow.py  jit_pipeline_vec.py  multiclock_regs.py  template_arith_demo.py  template_cache_params.py  template_decode_rules_demo.py  template_instance_map_demo.py  template_interface_wiring_demo.py  template_module_collection_demo.py  template_pipeline_builder_demo.py  template_struct_transform_demo.py  wire_ops.py
docs/: COMPILER_FLOW.md  DIAGNOSTICS.md  IR_SPEC.md  LINXCORE_DSE_GUIDE.md  LINXCORE_META_REWRITE_PLAN.md  META_COLLECTIONS.md  META_STRUCTURES.md  PRIMITIVES.md  TEMPLATE_METAPROGRAMMING.md  USAGE.md  index.md
docs/api/: index.md
docs/development/: index.md
docs/getting-started/: first-design.md  index.md  installation.md  quickstart.md
docs/tutorial/: cycle-aware-computing.md  index.md  unified-signal-model.md
examples/: README.md  counter.py  fifo_loopback.py  jit_control_flow.py  jit_pipeline_vec.py  multiclock_regs.py  update_generated.sh  wire_ops.py
examples/cpp/: CMakeLists.txt  tb_fifo.cpp
examples/fastfwd_pyc/: fastfwd_pyc.py
examples/fm16/: fm16_system.py  sw5809s.py
examples/fmac/: README.md  bf16_fmac.py  fmac_capi.cpp  primitive_standard_cells.py  test_bf16_fmac.py
examples/issue_queue_2picker/: tb_issue_queue_2picker.sv
examples/linx_cpu/: README.md  tb_linx_cpu_pyc.sv
examples/linx_cpu_pyc/: README.md  decode.py  isa.py  linx_cpu_pyc.py  memory.py  pipeline.py  regfile.py  tb_linx_cpu_pyc.cpp  util.py
flows/scripts/: run_examples.sh
flows/tools/: check_api_hygiene.py  run_fastfwd_pyc_cpp.sh  run_linx_cpu_pyc_cpp.sh
include/pyc/: README.md
janus/: update_generated.sh
janus/tb/: tb_janus_bcc_ooo_pyc.cpp  tb_janus_bcc_ooo_pyc.sv  tb_janus_tmu_pyc.cpp  tb_janus_tmu_pyc.sv
janus/tools/: run_janus_bcc_ooo_pyc_cpp.sh
pyc/mlir/: CMakeLists.txt  README.md
python/pycircuit/: __init__.py  cli.py  hw.py  jit.py
tools/: run_linx_cpu_pyc_cpp.sh
tools/linxisa/: elf_to_memh.py
(+106 files in other folders)
