[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pycircuit"
version = "0.0.0"
description = "pyCircuit prototype Python frontend for the PYC MLIR hardware IR."
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["binding/python"]

[project.scripts]
pycircuit = "pycircuit.cli:main"

