[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycircuit"
version = "0.1.0"
description = "A Python-based hardware description framework that compiles Python to RTL through MLIR"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "LinxISA Contributors", email = "contact@linxisa.org" }
]
requires-python = ">=3.9"
keywords = ["hardware", "rtl", "verilog", "mlir", "hdl", "fpga", "asic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Electronic Design Automation (EDA)",
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mdx-gh-links>=0.2.0",
]

[project.scripts]
pycircuit = "pycircuit.cli:main"

[tool.setuptools.packages.find]
where = ["compiler/frontend"]

[tool.setuptools.package-data]
pycircuit = ["**/*.py", "**/*.md"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
